turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:46: error: ')' expected but ';' found.
	setPosition(8;33)
                     ^Turmite:46: error: ';' expected but ')' found.
	setPosition(8;33)
                        ^